# phi_p3dx_description

./: CMakeLists.txt  LICENSE  README.md  package.xml
map/: indoor.pgm  indoor.yaml  indoor_costmap.pgm  obstacles.map  obstacles.pgm  obstacles.yaml  obstacles_costmap.pgm
models/obstacle2x2/floor/: model.config  model.sdf
models/obstacle2x2/floor/meshes/: mesh.dae
models/obstacle2x2/house/: model.config  model.sdf
models/obstacle2x2/house/meshes/: mesh.dae
rviz/: rviz.rviz  rviz_map.rviz
urdf/p3dx/: battery_block.xacro  inertia_tensors.xacro  pioneer3dx.xacro  pioneer3dx_body.xacro  pioneer3dx_gz.xacro  pioneer3dx_materials.xacro  pioneer3dx_swivel.xacro  pioneer3dx_wheel.xacro
urdf/p3dx/sensors/: pioneer3dx_camera.xacro  pioneer3dx_imu.xacro  pioneer3dx_laser.xacro  pioneer3dx_sensors.xacro  pioneer3dx_sonar.xacro
worlds/: empty_world.sdf  obstacles.sdf
