<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>phi_p3dx_description</name>
  <version>0.0.0</version>
  <description>Pacote para description do robô phi_p3dx</description>
  <maintainer email="lehindequi@gmail.com">olile11</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
